--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <div id="root" class="container mx-auto"></div>
+
+    <footer class="bg-slate-800 text-slate-100 text-center px-4 py-16">
+      <a href="https://framagit.org/ahangarha/mcv-bulk-text/" class="underline">Source Code</a>
+      under AGPL 3.0 license
+    </footer>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
