--- a/index.html
+++ b/index.html
@@ -1,34 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="fa" dir="rtl" data-mode="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MCV Bulk Text</title>
+    <title>آوازاد</title>
   </head>
-  <body>
-    <header class="bg-violet-900 text-white text-center px-4 py-16">
-      <div class="max-w-3xl mx-auto flex flex-col gap-8">
-        <h1 class="text-5xl font-semibold">
-          Mozilla Common Voice<br>
-          Text TSV Generator
-        </h1>
-        <p class="text-xl">
-          A simple web application designed to streamline bulk text imports for Mozilla Common Voice.
-        </p>
-        <p class="text-xl">
-          Copy your bulk text, click "process" button to pick valid sentences based on Common Voice critria. By providing "source" and "Rationale" for all the sentences, you are set to generate the required tsv file.
-        </p>
-      </div>
-    </header>
-
-    <div id="root" class="container mx-auto"></div>
-
-    <footer class="bg-slate-800 text-slate-100 text-center px-4 py-16">
-      <a href="https://framagit.org/ahangarha/mcv-bulk-text/" class="underline">Source Code</a>
-      under AGPL 3.0 license
-    </footer>
-
+  <body class="antialiased text-slate-300 bg-slate-900">
+    <div id="root" class=""></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
